AllTrades scrollspy alignment fix

--- a/client/src/Components/AllTrades/AllTrades.scss
+++ b/client/src/Components/AllTrades/AllTrades.scss
@@ -68,6 +68,10 @@
   opacity: 1;
 }
 
+.scrollspy-align-div{
+  height:6.5rem;
+}
+
 @media screen and (width < 992px) {
   .photo {
     max-width: 650px;
